<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.skyfolk.quantoflife.ui.now.NowFragment"
        android:label="@string/title_now"
        tools:layout="@layout/now_fragment" />

    <fragment
        android:id="@+id/navigation_feeds"
        android:name="com.skyfolk.quantoflife.ui.feeds.FeedsFragment"
        android:label="@string/title_feeds"
        tools:layout="@layout/feeds_fragment" />

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.skyfolk.quantoflife.ui.statistic.StatisticFragment"
        android:label="@string/title_statistic"
        tools:layout="@layout/feeds_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.skyfolk.quantoflife.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_fragment" />
</navigation>