<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_event_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_goal_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/quant_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/button_back"
                android:focusable="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_delete"
                android:focusable="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_delete"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_back"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/create_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_goal_title"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_delete"
                app:layout_constraintRight_toLeftOf="@id/button_ok"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/button_ok"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:focusable="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_ok"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goals_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_goal_top_bar"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

            <TextView
                android:id="@+id/goals_type_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text = "@string/select_goal_category"
                android:gravity="center_vertical" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                tools:entries="@array/goal_category_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/goals_period_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goals_type_layout"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/goals_period_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text = "@string/select_goal_period"/>

            <Spinner
                android:id="@+id/spinner_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/goal_time_interval"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goals_value_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goals_period_layout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/goals_value_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text = "@string/select_goal_value"/>

            <EditText
                android:id="@+id/goal_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_goal_value"
                android:layout_marginEnd="20dp"
                android:inputType="numberSigned|numberDecimal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:autofillHints="100" />

    </androidx.constraintlayout.widget.ConstraintLayout>>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>